# nucleus-sampling-llm-project-iasd-2025

./: README.md  generator.py  main.ipynb  main.py  main_qwen.ipynb  plots.ipynb  pyproject.toml  results_beam__Qwen__Qwen3-0.6B-Base.csv  results_beam__gpt2-large.csv  results_main__Qwen__Qwen3-0.6B-Base.csv  results_main__gpt2-large.csv
practice_codes/: 1_load_model_and_generate_greedily.py  2_minimal_loop_and_temperature.py  3_top_k_sampling.py  4_top_p_sampling.py  5_beam_search.py
